使用 Colaboratory 创建

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMhaUK+SdgUfKeLDLRzeNnJ",
+      "authorship_tag": "ABX9TyNYZenoaBbjuQKPcfVJnc9T",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -461,6 +461,57 @@
             "|  2|   Harlingen|      Venray|milkmilkmilkmilkm...|\n",
             "|  2|   Harlingen|      Venray|    tomatoestomatoes|\n",
             "+---+------------+------------+--------------------+\n",
+            "only showing top 20 rows\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# delete the duplicated routes\n",
+        "stpaths = str_df.dropDuplicates([\"id\", \"from\", \"to\"])\n",
+        "\n",
+        "stpaths.show()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KHfkTc_kHA5_",
+        "outputId": "66874421-5daa-4b4d-ba83-baf67c48e94f"
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+---+-------------+------------+--------------------+\n",
+            "| id|         from|          to|merchandise_quantity|\n",
+            "+---+-------------+------------+--------------------+\n",
+            "|  0|      Helmond| Schoonhoven|waterwaterwaterwater|\n",
+            "|  0|  Schoonhoven|     Zaandam|waterwaterwaterwater|\n",
+            "|  1| Klazienaveen|   The Hague|                pens|\n",
+            "|  1|       Nuenen|Klazienaveen|penspenspenspensp...|\n",
+            "|  2|     Enschede|   Harlingen|    milkmilkmilkmilk|\n",
+            "|  2|    Harlingen|      Venray|milkmilkmilkmilkm...|\n",
+            "|  3|     De Meern|  Heerenveen|honeyhoneyhoneyho...|\n",
+            "|  3|   Heerenveen|  Schaesberg|honeyhoneyhoneyho...|\n",
+            "|  4|  Bloemendaal|     Rucphen|            milkmilk|\n",
+            "|  4|      Rucphen|    Oostzaan|                milk|\n",
+            "|  5|   Amersfoort|        Echt|                pens|\n",
+            "|  5|        Ommen|  Amersfoort|                pens|\n",
+            "|  6|       Dongen|        Leek|    milkmilkmilkmilk|\n",
+            "|  6|     Reeuwijk|      Dongen|milkmilkmilkmilkmilk|\n",
+            "|  7|    Rozenburg| Zwijndrecht|               honey|\n",
+            "|  7|  Zwijndrecht|   Schijndel|honeyhoneyhoneyho...|\n",
+            "|  8|     Enschede|     Dronten|                milk|\n",
+            "|  8|         Made|    Enschede|        milkmilkmilk|\n",
+            "|  9|Sint Anthonis|       Weert|tomatoestomatoest...|\n",
+            "|  9|        Weert|  Sliedrecht|tomatoestomatoest...|\n",
+            "+---+-------------+------------+--------------------+\n",
             "only showing top 20 rows\n",
             "\n"
           ]
