使用 Colaboratory 创建

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNYZenoaBbjuQKPcfVJnc9T",
+      "authorship_tag": "ABX9TyMDV2l4YV0oUH8ieDtnT+Z4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,7 +34,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "7vgGYzsiFZyE",
-        "outputId": "c6bf577d-9fd9-4e0f-9a9a-136e963f9068"
+        "outputId": "e4412e46-4112-46cf-f60f-59835cb5f367"
       },
       "outputs": [
         {
@@ -81,7 +81,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AcIZ1cyMJPs0",
-        "outputId": "e6ce027e-a288-496c-e66e-1c0bdd1a4563"
+        "outputId": "e8a36785-a943-4b1e-a200-d8a1fb221587"
       },
       "execution_count": 3,
       "outputs": [
@@ -89,16 +89,16 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2023-06-28 18:13:27--  https://raw.githubusercontent.com/ZwL6/MZT/main/cities.json\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "--2023-06-28 22:26:34--  https://raw.githubusercontent.com/ZwL6/MZT/main/cities.json\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.111.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 15829 (15K) [text/plain]\n",
-            "Saving to: ‘cities.json.1’\n",
+            "Saving to: ‘cities.json.2’\n",
             "\n",
-            "cities.json.1       100%[===================>]  15.46K  --.-KB/s    in 0s      \n",
+            "cities.json.2       100%[===================>]  15.46K  --.-KB/s    in 0.002s  \n",
             "\n",
-            "2023-06-28 18:13:27 (56.7 MB/s) - ‘cities.json.1’ saved [15829/15829]\n",
+            "2023-06-28 22:26:35 (10.0 MB/s) - ‘cities.json.2’ saved [15829/15829]\n",
             "\n"
           ]
         }
@@ -352,7 +352,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bdfcXzp1kVSA",
-        "outputId": "0384911b-41d2-4bd8-8699-9089d8420e52"
+        "outputId": "b1ee8e5e-2d8b-434d-aa8a-a688cd5c0be6"
       },
       "execution_count": 8,
       "outputs": [
@@ -403,6 +403,8 @@
         "            'merchandise': merchandise,\n",
         "            'quantity': quantity\n",
         "        }, ignore_index=True)\n",
+        "# Create a SparkSession\n",
+        "spark = SparkSession.builder.getOrCreate()\n",
         "\n",
         "# Convert DataFrame to Spark DataFrame\n",
         "st_routes_df = spark.createDataFrame(df)"
@@ -410,7 +412,7 @@
       "metadata": {
         "id": "uoS_LRqHXCNl"
       },
-      "execution_count": 20,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -422,46 +424,31 @@
         "str_df = st_routes_df.withColumn('merchandise_quantity', expr(\"repeat(merchandise, quantity)\"))\n",
         "str_df = str_df.drop('merchandise','quantity')\n",
         "\n",
-        "str_df.show()"
+        "str_df.show(5)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Da0fAyHq0Q4J",
-        "outputId": "7c840abc-ba24-479b-ca2c-f803e72e95a2"
+        "outputId": "93249092-069c-4cca-f0e7-d4c03d607887"
       },
-      "execution_count": 35,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+---+------------+------------+--------------------+\n",
-            "| id|        from|          to|merchandise_quantity|\n",
-            "+---+------------+------------+--------------------+\n",
-            "|  0|     Helmond| Schoonhoven|waterwaterwaterwater|\n",
-            "|  0|     Helmond| Schoonhoven|          honeyhoney|\n",
-            "|  0|     Helmond| Schoonhoven|                pens|\n",
-            "|  0| Schoonhoven|     Zaandam|waterwaterwaterwater|\n",
-            "|  0| Schoonhoven|     Zaandam|               honey|\n",
-            "|  0| Schoonhoven|     Zaandam|    penspenspenspens|\n",
-            "|  1|      Nuenen|Klazienaveen|penspenspenspensp...|\n",
-            "|  1|      Nuenen|Klazienaveen|            tomatoes|\n",
-            "|  1|      Nuenen|Klazienaveen|                milk|\n",
-            "|  1|      Nuenen|Klazienaveen|               apple|\n",
-            "|  1|Klazienaveen|   The Hague|                pens|\n",
-            "|  1|Klazienaveen|   The Hague|tomatoestomatoest...|\n",
-            "|  1|Klazienaveen|   The Hague|    milkmilkmilkmilk|\n",
-            "|  1|Klazienaveen|   The Hague|appleappleappleap...|\n",
-            "|  2|    Enschede|   Harlingen|    milkmilkmilkmilk|\n",
-            "|  2|    Enschede|   Harlingen|tomatoestomatoest...|\n",
-            "|  2|    Enschede|   Harlingen|butterbutterbutte...|\n",
-            "|  2|    Enschede|   Harlingen|                pens|\n",
-            "|  2|   Harlingen|      Venray|milkmilkmilkmilkm...|\n",
-            "|  2|   Harlingen|      Venray|    tomatoestomatoes|\n",
-            "+---+------------+------------+--------------------+\n",
-            "only showing top 20 rows\n",
+            "+---+-----------+-----------+--------------------+\n",
+            "| id|       from|         to|merchandise_quantity|\n",
+            "+---+-----------+-----------+--------------------+\n",
+            "|  0|    Helmond|Schoonhoven|waterwaterwaterwater|\n",
+            "|  0|    Helmond|Schoonhoven|          honeyhoney|\n",
+            "|  0|    Helmond|Schoonhoven|                pens|\n",
+            "|  0|Schoonhoven|    Zaandam|waterwaterwaterwater|\n",
+            "|  0|Schoonhoven|    Zaandam|               honey|\n",
+            "+---+-----------+-----------+--------------------+\n",
+            "only showing top 5 rows\n",
             "\n"
           ]
         }
@@ -473,46 +460,31 @@
         "# delete the duplicated routes\n",
         "stpaths = str_df.dropDuplicates([\"id\", \"from\", \"to\"])\n",
         "\n",
-        "stpaths.show()"
+        "stpaths.show(5)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "KHfkTc_kHA5_",
-        "outputId": "66874421-5daa-4b4d-ba83-baf67c48e94f"
+        "outputId": "883feddd-8eab-4bd2-c5f4-8df52299ef37"
       },
-      "execution_count": 70,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "+---+-------------+------------+--------------------+\n",
-            "| id|         from|          to|merchandise_quantity|\n",
-            "+---+-------------+------------+--------------------+\n",
-            "|  0|      Helmond| Schoonhoven|waterwaterwaterwater|\n",
-            "|  0|  Schoonhoven|     Zaandam|waterwaterwaterwater|\n",
-            "|  1| Klazienaveen|   The Hague|                pens|\n",
-            "|  1|       Nuenen|Klazienaveen|penspenspenspensp...|\n",
-            "|  2|     Enschede|   Harlingen|    milkmilkmilkmilk|\n",
-            "|  2|    Harlingen|      Venray|milkmilkmilkmilkm...|\n",
-            "|  3|     De Meern|  Heerenveen|honeyhoneyhoneyho...|\n",
-            "|  3|   Heerenveen|  Schaesberg|honeyhoneyhoneyho...|\n",
-            "|  4|  Bloemendaal|     Rucphen|            milkmilk|\n",
-            "|  4|      Rucphen|    Oostzaan|                milk|\n",
-            "|  5|   Amersfoort|        Echt|                pens|\n",
-            "|  5|        Ommen|  Amersfoort|                pens|\n",
-            "|  6|       Dongen|        Leek|    milkmilkmilkmilk|\n",
-            "|  6|     Reeuwijk|      Dongen|milkmilkmilkmilkmilk|\n",
-            "|  7|    Rozenburg| Zwijndrecht|               honey|\n",
-            "|  7|  Zwijndrecht|   Schijndel|honeyhoneyhoneyho...|\n",
-            "|  8|     Enschede|     Dronten|                milk|\n",
-            "|  8|         Made|    Enschede|        milkmilkmilk|\n",
-            "|  9|Sint Anthonis|       Weert|tomatoestomatoest...|\n",
-            "|  9|        Weert|  Sliedrecht|tomatoestomatoest...|\n",
-            "+---+-------------+------------+--------------------+\n",
-            "only showing top 20 rows\n",
+            "+---+------------+------------+--------------------+\n",
+            "| id|        from|          to|merchandise_quantity|\n",
+            "+---+------------+------------+--------------------+\n",
+            "|  0|     Helmond| Schoonhoven|waterwaterwaterwater|\n",
+            "|  0| Schoonhoven|     Zaandam|waterwaterwaterwater|\n",
+            "|  1|Klazienaveen|   The Hague|                pens|\n",
+            "|  1|      Nuenen|Klazienaveen|penspenspenspensp...|\n",
+            "|  2|    Enschede|   Harlingen|    milkmilkmilkmilk|\n",
+            "+---+------------+------------+--------------------+\n",
+            "only showing top 5 rows\n",
             "\n"
           ]
         }
@@ -574,64 +546,28 @@
         "ac_routes_df = ac_routes_df.withColumn('new_id', monotonically_increasing_id())\n"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "EpXKTrpdhTib",
-        "outputId": "9cabd45d-367a-48b6-e6a9-028d245033c0"
+        "id": "EpXKTrpdhTib"
       },
-      "execution_count": 30,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "+---+-----------+-----------+-----------+-----------+--------+------+\n",
-            "| id|original_id|       from|         to|merchandise|quantity|new_id|\n",
-            "+---+-----------+-----------+-----------+-----------+--------+------+\n",
-            "|0-1|          0|Barendrecht|Schoonhoven|      honey|       3|     0|\n",
-            "|0-1|          0|Barendrecht|Schoonhoven|   tomatoes|       5|     1|\n",
-            "|0-1|          0|Barendrecht|Schoonhoven|     butter|       2|     2|\n",
-            "|0-1|          0|Schoonhoven|    Zaandam|      apple|       4|     3|\n",
-            "|0-1|          0|Schoonhoven|    Zaandam|       milk|       5|     4|\n",
-            "|0-1|          0|Schoonhoven|    Zaandam|   tomatoes|       3|     5|\n",
-            "|0-1|          0|Schoonhoven|    Zaandam|      water|       5|     6|\n",
-            "|0-1|          0|Schoonhoven|    Zaandam|     butter|       4|     7|\n",
-            "|0-2|          0|    Helmond|   Enschede|      water|       4|     8|\n",
-            "|0-2|          0|    Helmond|   Enschede|     butter|       5|     9|\n",
-            "|0-2|          0|    Helmond|   Enschede|      honey|       2|    10|\n",
-            "|0-2|          0|   Enschede|    Zaandam|   tomatoes|       3|    11|\n",
-            "|0-2|          0|   Enschede|    Zaandam|      honey|       2|    12|\n",
-            "|0-2|          0|   Enschede|    Zaandam|       pens|       2|    13|\n",
-            "|0-2|          0|   Enschede|    Zaandam|      apple|       5|    14|\n",
-            "|0-2|          0|   Enschede|    Zaandam|      water|       5|    15|\n",
-            "|0-3|          0|    Helmond|   Nootdorp|      water|       4|    16|\n",
-            "|0-3|          0|    Helmond|   Nootdorp|       pens|       2|    17|\n",
-            "|0-3|          0|    Helmond|   Nootdorp|       milk|       4|    18|\n",
-            "|0-3|          0|    Helmond|   Nootdorp|     butter|       4|    19|\n",
-            "+---+-----------+-----------+-----------+-----------+--------+------+\n",
-            "only showing top 20 rows\n",
-            "\n"
-          ]
-        }
-      ]
+      "execution_count": 13,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "# combine merchandies and quantity\n",
         "acr_df = ac_routes_df.withColumn('merchandise_quantity', expr(\"repeat(merchandise, quantity)\"))\n",
         "acr_df = acr_df.drop('merchandise', 'quantity', 'new_id')\n",
         "\n",
-        "acr_df.show()\n"
+        "acr_df.show(5)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "5jcEdj7rKeBB",
-        "outputId": "c89d7c18-f73d-4cfa-9ea7-3d0691011129"
+        "outputId": "2e3a654f-b2c0-4b77-a072-6e28e6693799"
       },
-      "execution_count": 44,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -645,23 +581,8 @@
             "|0-1|          0|Barendrecht|Schoonhoven|        butterbutter|\n",
             "|0-1|          0|Schoonhoven|    Zaandam|appleappleappleapple|\n",
             "|0-1|          0|Schoonhoven|    Zaandam|milkmilkmilkmilkmilk|\n",
-            "|0-1|          0|Schoonhoven|    Zaandam|tomatoestomatoest...|\n",
-            "|0-1|          0|Schoonhoven|    Zaandam|waterwaterwaterwa...|\n",
-            "|0-1|          0|Schoonhoven|    Zaandam|butterbutterbutte...|\n",
-            "|0-2|          0|    Helmond|   Enschede|waterwaterwaterwater|\n",
-            "|0-2|          0|    Helmond|   Enschede|butterbutterbutte...|\n",
-            "|0-2|          0|    Helmond|   Enschede|          honeyhoney|\n",
-            "|0-2|          0|   Enschede|    Zaandam|tomatoestomatoest...|\n",
-            "|0-2|          0|   Enschede|    Zaandam|          honeyhoney|\n",
-            "|0-2|          0|   Enschede|    Zaandam|            penspens|\n",
-            "|0-2|          0|   Enschede|    Zaandam|appleappleappleap...|\n",
-            "|0-2|          0|   Enschede|    Zaandam|waterwaterwaterwa...|\n",
-            "|0-3|          0|    Helmond|   Nootdorp|waterwaterwaterwater|\n",
-            "|0-3|          0|    Helmond|   Nootdorp|            penspens|\n",
-            "|0-3|          0|    Helmond|   Nootdorp|    milkmilkmilkmilk|\n",
-            "|0-3|          0|    Helmond|   Nootdorp|butterbutterbutte...|\n",
             "+---+-----------+-----------+-----------+--------------------+\n",
-            "only showing top 20 rows\n",
+            "only showing top 5 rows\n",
             "\n"
           ]
         }
@@ -673,16 +594,16 @@
         "# delete the duplicated routes\n",
         "acpaths = acr_df.dropDuplicates([\"id\", \"original_id\", \"from\", \"to\"])\n",
         "\n",
-        "acpaths.show()"
+        "acpaths.show(5)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "j7ZxDm_V8GkW",
-        "outputId": "eb3d683a-3ff7-4743-cad2-cfad4874872d"
+        "outputId": "db280b71-844d-4e15-f9cf-72ee6fcc572a"
       },
-      "execution_count": 66,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -696,23 +617,8 @@
             "|0-10|          0| Den Helder|Schoonhoven|          waterwater|\n",
             "|0-10|          0|Schoonhoven|    Zaandam|    penspenspenspens|\n",
             "| 0-2|          0|   Enschede|    Zaandam|tomatoestomatoest...|\n",
-            "| 0-2|          0|    Helmond|   Enschede|waterwaterwaterwater|\n",
-            "| 0-3|          0|    Helmond|   Nootdorp|waterwaterwaterwater|\n",
-            "| 0-3|          0|   Nootdorp|    Zaandam|     waterwaterwater|\n",
-            "| 0-4|          0|    Helmond|Schoonhoven|penspenspenspenspens|\n",
-            "| 0-4|          0|Schoonhoven|    Zaandam|honeyhoneyhoneyho...|\n",
-            "| 0-5|          0|    Helmond|Schoonhoven|tomatoestomatoest...|\n",
-            "| 0-5|          0|Schoonhoven|    Zaandam|appleappleappleap...|\n",
-            "| 0-6|          0| Amstelveen|    Zaandam|               apple|\n",
-            "| 0-6|          0|    Helmond| Amstelveen|              butter|\n",
-            "| 0-7|          0|    Helmond|Schoonhoven|tomatoestomatoest...|\n",
-            "| 0-7|          0|Schoonhoven|    Zaandam|     appleappleapple|\n",
-            "| 0-8|          0|     Bergen|    Zaandam|     appleappleapple|\n",
-            "| 0-8|          0|    Helmond|     Bergen|    milkmilkmilkmilk|\n",
-            "| 0-9|          0|    Helmond|Schoonhoven|     honeyhoneyhoney|\n",
-            "| 0-9|          0|Schoonhoven|    Zaandam|        penspenspens|\n",
             "+----+-----------+-----------+-----------+--------------------+\n",
-            "only showing top 20 rows\n",
+            "only showing top 5 rows\n",
             "\n"
           ]
         }
@@ -733,7 +639,7 @@
       "metadata": {
         "id": "B4TmnMW2BtIH"
       },
-      "execution_count": 50,
+      "execution_count": 16,
       "outputs": []
     }
   ]
