使用 Colaboratory 创建

--- a/assignment.ipynb
+++ b/assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMDV2l4YV0oUH8ieDtnT+Z4",
+      "authorship_tag": "ABX9TyMC8ommowhQscaWbMlOI4i1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,23 +28,71 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "7vgGYzsiFZyE",
-        "outputId": "e4412e46-4112-46cf-f60f-59835cb5f367"
+        "outputId": "3b1414b7-1dce-4d67-9384-0c3e6bc0e514"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: pyspark in /usr/local/lib/python3.10/dist-packages (3.4.1)\n",
+            "Collecting pyspark\n",
+            "  Downloading pyspark-3.4.1.tar.gz (310.8 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m310.8/310.8 MB\u001b[0m \u001b[31m2.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Requirement already satisfied: py4j==0.10.9.7 in /usr/local/lib/python3.10/dist-packages (from pyspark) (0.10.9.7)\n",
-            "openjdk-8-jdk-headless is already the newest version (8u372-ga~us1-0ubuntu1~20.04).\n",
-            "0 upgraded, 0 newly installed, 0 to remove and 13 not upgraded.\n"
+            "Building wheels for collected packages: pyspark\n",
+            "  Building wheel for pyspark (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for pyspark: filename=pyspark-3.4.1-py2.py3-none-any.whl size=311285398 sha256=94e9b9cc8c6863019702b1ec88835a7f78c365799920e3e9950db49bb87fd699\n",
+            "  Stored in directory: /root/.cache/pip/wheels/0d/77/a3/ff2f74cc9ab41f8f594dabf0579c2a7c6de920d584206e0834\n",
+            "Successfully built pyspark\n",
+            "Installing collected packages: pyspark\n",
+            "Successfully installed pyspark-3.4.1\n",
+            "The following additional packages will be installed:\n",
+            "  libxtst6 openjdk-8-jre-headless\n",
+            "Suggested packages:\n",
+            "  openjdk-8-demo openjdk-8-source libnss-mdns fonts-dejavu-extra\n",
+            "  fonts-ipafont-gothic fonts-ipafont-mincho fonts-wqy-microhei\n",
+            "  fonts-wqy-zenhei fonts-indic\n",
+            "The following NEW packages will be installed:\n",
+            "  libxtst6 openjdk-8-jdk-headless openjdk-8-jre-headless\n",
+            "0 upgraded, 3 newly installed, 0 to remove and 13 not upgraded.\n",
+            "Need to get 36.5 MB of archives.\n",
+            "After this operation, 144 MB of additional disk space will be used.\n",
+            "Selecting previously unselected package libxtst6:amd64.\n",
+            "(Reading database ... 123069 files and directories currently installed.)\n",
+            "Preparing to unpack .../libxtst6_2%3a1.2.3-1_amd64.deb ...\n",
+            "Unpacking libxtst6:amd64 (2:1.2.3-1) ...\n",
+            "Selecting previously unselected package openjdk-8-jre-headless:amd64.\n",
+            "Preparing to unpack .../openjdk-8-jre-headless_8u372-ga~us1-0ubuntu1~20.04_amd64.deb ...\n",
+            "Unpacking openjdk-8-jre-headless:amd64 (8u372-ga~us1-0ubuntu1~20.04) ...\n",
+            "Selecting previously unselected package openjdk-8-jdk-headless:amd64.\n",
+            "Preparing to unpack .../openjdk-8-jdk-headless_8u372-ga~us1-0ubuntu1~20.04_amd64.deb ...\n",
+            "Unpacking openjdk-8-jdk-headless:amd64 (8u372-ga~us1-0ubuntu1~20.04) ...\n",
+            "Setting up libxtst6:amd64 (2:1.2.3-1) ...\n",
+            "Setting up openjdk-8-jre-headless:amd64 (8u372-ga~us1-0ubuntu1~20.04) ...\n",
+            "update-alternatives: using /usr/lib/jvm/java-8-openjdk-amd64/jre/bin/orbd to provide /usr/bin/orbd (orbd) in auto mode\n",
+            "update-alternatives: using /usr/lib/jvm/java-8-openjdk-amd64/jre/bin/servertool to provide /usr/bin/servertool (servertool) in auto mode\n",
+            "update-alternatives: using /usr/lib/jvm/java-8-openjdk-amd64/jre/bin/tnameserv to provide /usr/bin/tnameserv (tnameserv) in auto mode\n",
+            "Setting up openjdk-8-jdk-headless:amd64 (8u372-ga~us1-0ubuntu1~20.04) ...\n",
+            "update-alternatives: using /usr/lib/jvm/java-8-openjdk-amd64/bin/idlj to provide /usr/bin/idlj (idlj) in auto mode\n",
+            "update-alternatives: using /usr/lib/jvm/java-8-openjdk-amd64/bin/wsimport to provide /usr/bin/wsimport (wsimport) in auto mode\n",
+            "update-alternatives: using /usr/lib/jvm/java-8-openjdk-amd64/bin/jsadebugd to provide /usr/bin/jsadebugd (jsadebugd) in auto mode\n",
+            "update-alternatives: using /usr/lib/jvm/java-8-openjdk-amd64/bin/native2ascii to provide /usr/bin/native2ascii (native2ascii) in auto mode\n",
+            "update-alternatives: using /usr/lib/jvm/java-8-openjdk-amd64/bin/javah to provide /usr/bin/javah (javah) in auto mode\n",
+            "update-alternatives: using /usr/lib/jvm/java-8-openjdk-amd64/bin/clhsdb to provide /usr/bin/clhsdb (clhsdb) in auto mode\n",
+            "update-alternatives: using /usr/lib/jvm/java-8-openjdk-amd64/bin/jhat to provide /usr/bin/jhat (jhat) in auto mode\n",
+            "update-alternatives: using /usr/lib/jvm/java-8-openjdk-amd64/bin/extcheck to provide /usr/bin/extcheck (extcheck) in auto mode\n",
+            "update-alternatives: using /usr/lib/jvm/java-8-openjdk-amd64/bin/hsdb to provide /usr/bin/hsdb (hsdb) in auto mode\n",
+            "update-alternatives: using /usr/lib/jvm/java-8-openjdk-amd64/bin/schemagen to provide /usr/bin/schemagen (schemagen) in auto mode\n",
+            "update-alternatives: using /usr/lib/jvm/java-8-openjdk-amd64/bin/xjc to provide /usr/bin/xjc (xjc) in auto mode\n",
+            "update-alternatives: using /usr/lib/jvm/java-8-openjdk-amd64/bin/wsgen to provide /usr/bin/wsgen (wsgen) in auto mode\n",
+            "Processing triggers for libc-bin (2.31-0ubuntu9.9) ...\n"
           ]
         }
       ],
@@ -66,7 +114,7 @@
       "metadata": {
         "id": "nS9UM1hoFizF"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -81,24 +129,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AcIZ1cyMJPs0",
-        "outputId": "e8a36785-a943-4b1e-a200-d8a1fb221587"
+        "outputId": "d6e8980e-b0f4-4480-a869-74188a1a3b5a"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2023-06-28 22:26:34--  https://raw.githubusercontent.com/ZwL6/MZT/main/cities.json\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.109.133, 185.199.111.133, 185.199.110.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.109.133|:443... connected.\n",
+            "--2023-06-29 11:08:12--  https://raw.githubusercontent.com/ZwL6/MZT/main/cities.json\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.110.133, 185.199.109.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 15829 (15K) [text/plain]\n",
-            "Saving to: ‘cities.json.2’\n",
+            "Saving to: ‘cities.json’\n",
             "\n",
-            "cities.json.2       100%[===================>]  15.46K  --.-KB/s    in 0.002s  \n",
+            "cities.json         100%[===================>]  15.46K  --.-KB/s    in 0.006s  \n",
             "\n",
-            "2023-06-28 22:26:35 (10.0 MB/s) - ‘cities.json.2’ saved [15829/15829]\n",
+            "2023-06-29 11:08:12 (2.39 MB/s) - ‘cities.json’ saved [15829/15829]\n",
             "\n"
           ]
         }
@@ -161,7 +209,7 @@
       "metadata": {
         "id": "qj8cYyhKSHBl"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -174,7 +222,7 @@
       "metadata": {
         "id": "uNZs3ShmVCAl"
       },
-      "execution_count": 5,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -246,7 +294,7 @@
       "metadata": {
         "id": "CGJurVstWvbv"
       },
-      "execution_count": 6,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -259,7 +307,7 @@
       "metadata": {
         "id": "WOqkwzTkX1L5"
       },
-      "execution_count": 7,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -352,17 +400,24 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "bdfcXzp1kVSA",
-        "outputId": "b1ee8e5e-2d8b-434d-aa8a-a688cd5c0be6"
+        "outputId": "6f34b87b-f7d6-4a78-cc91-91ac03cd0aaf"
       },
-      "execution_count": 8,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: python-Levenshtein in /usr/local/lib/python3.10/dist-packages (0.21.1)\n",
-            "Requirement already satisfied: Levenshtein==0.21.1 in /usr/local/lib/python3.10/dist-packages (from python-Levenshtein) (0.21.1)\n",
-            "Requirement already satisfied: rapidfuzz<4.0.0,>=2.3.0 in /usr/local/lib/python3.10/dist-packages (from Levenshtein==0.21.1->python-Levenshtein) (3.1.1)\n",
+            "Collecting python-Levenshtein\n",
+            "  Downloading python_Levenshtein-0.21.1-py3-none-any.whl (9.4 kB)\n",
+            "Collecting Levenshtein==0.21.1 (from python-Levenshtein)\n",
+            "  Downloading Levenshtein-0.21.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (172 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m172.5/172.5 kB\u001b[0m \u001b[31m5.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hCollecting rapidfuzz<4.0.0,>=2.3.0 (from Levenshtein==0.21.1->python-Levenshtein)\n",
+            "  Downloading rapidfuzz-3.1.1-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (3.1 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m3.1/3.1 MB\u001b[0m \u001b[31m42.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hInstalling collected packages: rapidfuzz, Levenshtein, python-Levenshtein\n",
+            "Successfully installed Levenshtein-0.21.1 python-Levenshtein-0.21.1 rapidfuzz-3.1.1\n",
             "Prediction accuracy: 82.38%\n"
           ]
         }
@@ -431,7 +486,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Da0fAyHq0Q4J",
-        "outputId": "93249092-069c-4cca-f0e7-d4c03d607887"
+        "outputId": "440ed992-9842-4295-f5c2-6bebc0239e2e"
       },
       "execution_count": 11,
       "outputs": [
@@ -467,7 +522,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KHfkTc_kHA5_",
-        "outputId": "883feddd-8eab-4bd2-c5f4-8df52299ef37"
+        "outputId": "f82e84e4-5448-47ff-ea29-5369aabcd0ed"
       },
       "execution_count": 12,
       "outputs": [
@@ -565,7 +620,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5jcEdj7rKeBB",
-        "outputId": "2e3a654f-b2c0-4b77-a072-6e28e6693799"
+        "outputId": "f02cda47-9f67-45ea-df27-e1ad5709291a"
       },
       "execution_count": 14,
       "outputs": [
@@ -601,7 +656,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "j7ZxDm_V8GkW",
-        "outputId": "db280b71-844d-4e15-f9cf-72ee6fcc572a"
+        "outputId": "8b3c0b67-c092-479d-84d9-c3d629e6dc7e"
       },
       "execution_count": 15,
       "outputs": [
@@ -627,6 +682,73 @@
     {
       "cell_type": "code",
       "source": [
+        "# Rename the columns\n",
+        "pa_standard = stpaths.selectExpr(\"id as st_id\", \"from as st_from\", \"to as st_to\")\n",
+        "pa_actual = acpaths.selectExpr(\"id as act_id\", \"original_id\", \"from as act_from\", \"to as act_to\")\n",
+        "\n",
+        "pa_actual.show()\n",
+        "\n",
+        "df_joined = pa_actual.join(pa_standard, (pa_actual.original_id == pa_standard.st_id), 'outer')\n",
+        "\n",
+        "df_joined.show(5)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SVmfmim1Fipk",
+        "outputId": "40a1367a-0f6e-4737-e840-89ef1eaeaf88"
+      },
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "+------+-----------+---------------+----------------+\n",
+            "|act_id|original_id|       act_from|          act_to|\n",
+            "+------+-----------+---------------+----------------+\n",
+            "|   1-8|          1|   Klazienaveen|       The Hague|\n",
+            "|  12-6|         12|       Franeker|        Schinnen|\n",
+            "|  13-3|         13|         Raalte|Koog aan de Zaan|\n",
+            "|  21-8|         21|         Vianen|       Nijverdal|\n",
+            "|  35-5|         35|      Apeldoorn|       Breukelen|\n",
+            "| 40-10|         40|       Hillegom|     Heerlerbaan|\n",
+            "|  54-2|         54|       Blaricum|        Kerkrade|\n",
+            "| 55-10|         55|    Barendrecht|        Uithoorn|\n",
+            "|  66-9|         66|       Rosmalen|         Eerbeek|\n",
+            "|  68-3|         68|       Zeewolde|        Ubbergen|\n",
+            "|  74-9|         74|    Heerlerbaan|        Blaricum|\n",
+            "|  87-7|         87|         Raalte|          Raalte|\n",
+            "|  89-9|         89|        Naarden|          Borger|\n",
+            "|  94-8|         94|        Helmond|           Wezep|\n",
+            "|  98-3|         98|     Amersfoort|          Bunnik|\n",
+            "| 102-6|        102|  ?-Gravenzande|         Wijchen|\n",
+            "|106-10|        106|      Beverwijk|       Rotterdam|\n",
+            "| 107-8|        107|         Putten|       Montfoort|\n",
+            "| 120-3|        120|         Voorst|           Hulst|\n",
+            "| 129-4|        129|?-Hertogenbosch|        Drachten|\n",
+            "+------+-----------+---------------+----------------+\n",
+            "only showing top 20 rows\n",
+            "\n",
+            "+------+-----------+-----------+-----------+-----+-----------+-----------+\n",
+            "|act_id|original_id|   act_from|     act_to|st_id|    st_from|      st_to|\n",
+            "+------+-----------+-----------+-----------+-----+-----------+-----------+\n",
+            "|   0-5|          0|    Helmond|Schoonhoven|    0|    Helmond|Schoonhoven|\n",
+            "|   0-5|          0|    Helmond|Schoonhoven|    0|Schoonhoven|    Zaandam|\n",
+            "|   0-1|          0|Schoonhoven|    Zaandam|    0|    Helmond|Schoonhoven|\n",
+            "|   0-1|          0|Schoonhoven|    Zaandam|    0|Schoonhoven|    Zaandam|\n",
+            "|   0-4|          0|    Helmond|Schoonhoven|    0|    Helmond|Schoonhoven|\n",
+            "+------+-----------+-----------+-----------+-----+-----------+-----------+\n",
+            "only showing top 5 rows\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "from pyspark.sql.functions import udf\n",
         "from pyspark.sql.types import IntegerType\n",
         "from Levenshtein import distance\n",
@@ -639,7 +761,7 @@
       "metadata": {
         "id": "B4TmnMW2BtIH"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     }
   ]
